added the second and third level of monster

--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My First Github Repo</title>
+    <link rel="stylesheet" href="blog.css">
 </head>
 <body>
-
+    <div>
+        <h3>The Level of Monsters</h3>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam laudantium facere reiciendis mollitia vitae, necessitatibus iusto? Repudiandae distinctio corrupti, eum sapiente voluptatibus beatae iusto? Esse odit perferendis atque. Laudantium, deleniti!</p>
+    </div>
 </body>
 </html>
